# AndroidImgui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  m.bat
src/: ANativeWindowCreator.h  AndroidImgui.cpp  AndroidImgui.h  GraphicsManager.cpp  GraphicsManager.h  Log.h  OpenGLGraphics.cpp  OpenGLGraphics.h  SoftwareGraphics.cpp  SoftwareGraphics.h  TouchHelperA.cpp  TouchHelperA.h  Utils.h  VectorStruct.h  VulkanGraphics.cpp  VulkanGraphics.h  my_imgui.cpp  my_imgui.h  my_imgui_impl_android.cpp  my_imgui_impl_android.h  spinlock.h  vulkan_wrapper.cpp  vulkan_wrapper.h
src/ELF/: elf_util.cpp  elf_util.h
src/Jenv/: JavaFunc.cpp  JavaFunc.h  classes.h  java.rar
test/: main.cpp  main2.cpp  main3.cpp  vedrana.h
